More mobile rendering improvements.

--- a/lib/hex2txt_web/controllers/page_html/home.html.heex
+++ b/lib/hex2txt_web/controllers/page_html/home.html.heex
@@ -2,7 +2,7 @@
 
 <div class="px-4 py-10 sm:px-6 sm:py-28 lg:px-8 xl:px-28 xl:py-32">
   <div class="mx-auto max-w-3xl lg:mx-0">
-    <div class="bg-white border-solid border-4 border-gray-500 p-8 max-w-3xl w-full">
+    <div class="bg-white border-solid border-4 border-gray-500 p-4 sm:p-8 max-w-3xl w-full">
       <div class="space-y-8">
         <div class="relative mb-12">
           <div class="absolute inset-0 bg-brand transform translate-x-2 translate-y-2"></div>
@@ -30,7 +30,7 @@
           Usage Details
         </h2>
 
-        <div class="bg-white border border-gray-200 shadow-lg p-8 !mt-4 max-w-3xl w-full space-y-8">
+        <div class="bg-white border border-gray-200 shadow-lg p-4 sm:p-8 !mt-4 max-w-3xl w-full space-y-8">
           <div class="border-l-4 border-green-500 pl-4 overflow-auto">
             <h2 class="text-xl font-semibold mb-2 text-green-700">Latest Version</h2>
             <p class="text-gray-600 mb-2 text-sm">Generate an <kbd>/llms.txt</kbd> file
@@ -169,7 +169,7 @@
                   <a class="text-brand hover:text-blue-700" href="https://aider.chat/">
                     Aider:
                   </a>
-                  <ul class="list-disc pl-5 space-y-2 my-4">
+                  <ul class="list-disc pl-5 space-y-2 my-4 overflow-scroll">
                     <li>
                       <em>Session 1:</em>
                       Aider hallucinates and generates broken code
