Add a supplementary explainer blurb to the home page.

--- a/lib/hex2txt_web/controllers/page_html/home.html.heex
+++ b/lib/hex2txt_web/controllers/page_html/home.html.heex
@@ -23,6 +23,11 @@
               </a>
               file
             </p>
+
+            <p class="italic font-mono text-[1.1rem] bg-yellow-300 p-3 font-semibold leading-10 tracking-tighter text-zinc-900 text-balance">
+              …this helps AI coding assistants write better Elixir code by teaching them
+              about the packages you're using
+            </p>
           </div>
         </div>
 
